Flesh out Android studio client implementation to start Studio and wait for the agent to connect back.
Add `--studio-install-dir` command-line option, which is required when measuring an Android Studio sync.